--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "shopping-list",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "author": "Ross-Hunter <ross-hunter@ross-hunter.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "express": "^4.16.2",
+    "pg": "^7.4.0"
+  },
+  "scripts": {
+    "start": "nodemon"
+  }
 }
