--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.2",
+    "nodemon": "^1.12.1",
     "pg": "^7.4.0"
   },
   "scripts": {
