--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pg": "^7.4.0"
   },
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "heroku-postbuild": "cd client && yarn install && yarn build"
   }
 }
