--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "nodemon": "^1.12.1",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "prettier": "^1.9.0"
   },
   "scripts": {
     "start": "nodemon",
